tests/specs/run/error_syntax_invalid_arrow_params/main.out
error: SyntaxError: Not a pattern
  |
2 | const test = (i, 2 * i) => console.log(i);
  |                  ~~~~~
    at [WILDCARD]/main.ts:2:18
