tests/specs/run/error_syntax_invalid_arrow_params/main.ts
// deno-fmt-ignore-file
const test = (i, 2 * i) => console.log(i);
